--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ defusedxml==0.7.1
 dj-database-url==1.0.0
 Django==4.0.6
 django-extensions==2.2.5
+django-jsonfield-backport==1.0.5
 gunicorn==20.1.0
 idna==3.3
 MarkupSafe==2.1.1
