--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ charset-normalizer==2.1.0
 cryptography==37.0.4
 defusedxml==0.7.1
 dj-database-url==1.0.0
-Django==4.0.6
+Django==3.2
 django-extensions==2.2.5
 django-jsonfield-backport==1.0.5
 gunicorn==20.1.0
@@ -19,6 +19,7 @@ PyJWT==2.4.0
 pyOpenSSL==22.0.0
 python-dotenv==0.20.0
 python3-openid==3.2.0
+pytz==2022.1
 requests==2.28.1
 requests-oauthlib==1.3.1
 six==1.16.0
